tests/type-errors/05-list-mismatch.flt
// List element type mismatch
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
[1, true]
// --- Output:
TypeError: Cannot unify int with bool
